# nidibot

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yml  setup.cfg
.github/: dependabot.yml
.github/workflows/: create-and-publish-release.yml  python-tests.yml
nidibot/: __init__.py  nidibot.py  nitrado.py
nidibot/bots/: bot_base.py  bot_factory.py  bot_interface.py  discord_bot.py  telegram_bot.py
nidibot/server_provider/: game_server.py  nitrado_server_provider.py  server_provider_base.py  server_provider_factory.py  server_provider_interface.py
nidibot/templates/common/: bot_configuration.json  start_bot.py  start_bot_docker.py
nidibot/templates/linux/: nidibot.service
tests/: test_nidibot.py  test_nitrado.py
