[metadata]
name = nidibot
version = 1.1.4
keywords = discord, nitrado, bot
description = Simple to install and configure bot for controlling your game servers from any messaging platform. 
author = Pavel Ivanov
author_email = 
url = https://github.com/morwy/nidibot
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Communications :: Chat
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Bug Tracker = https://github.com/morwy/nidibot/issues
    Source Code = https://github.com/morwy/nidibot

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.8.0,<3.13
packages = find:
install_requires =
    dacite
    ftputil
    hikari
    hikari-lightbulb
    paramiko
    python-telegram-bot
    requests

[options.package_data]
nidibot = py.typed

[options.packages.find]
include = 
    nidibot*
    nidibot.templates.common
    nidibot.templates.linux
exclude =
    tests

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = 1